--- a/index.html
+++ b/index.html
@@ -1,10 +1,10 @@
-<!DOCTYPE html>
-<html lang="en">
+<DOCTYPE html>
+<html>
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
 
-  <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
+  <link rel="icon" type="image/png" sizes="32x32" href="https://c.top4top.io/p_2212pk47i1.png">
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Outfit:wght@400;700&display=swap" rel="stylesheet">
@@ -12,7 +12,6 @@
 
   <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
   <style>
-    @import url("https://fonts.google.com/specimen/Outfit");
      header{
       background: rgb(0, 104, 189);
       height: 50px;
@@ -138,14 +137,14 @@
 <body>
   <header>
     <a class="header__header-logo" href="https://www.frontendmentor.io/profile/egyptainEagle" target="_blank">
-      <img class="header-logo__img" src="images/logo.jpg">
+      <img class="header-logo__img" src="https://e.top4top.io/p_2212x9do33.jpg">
       <span class="header-logo__name">Visit My Profile</span>
     </a>
 
   </header>
   <main>
    <div class="container">
-     <img src="images/image-qr-code.png" class="container__img">
+     <img src="https://d.top4top.io/p_2212ettif2.png" class="container__img">
      <h1 class="container__title">Improve your front-end skills by building projects</h1>
      <p class="container__description">Scan the QR code to visit Frontend Mentor and take your coding skills to the next level</p>
    </div>
@@ -156,7 +155,7 @@
 
   <div class="attribution">
     Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>
-    Coded by <a style="display: inline-flex;" href="https://www.frontendmentor.io/profile/egyptainEagle"><img src="images/logo.jpg" style="width:1.3em; margin:0 0.3em; border-radius: 50%;">Shihab Ali</a>
+    Coded by <a style="display: inline-flex;" href="https://www.frontendmentor.io/profile/egyptainEagle"><img src="https://e.top4top.io/p_2212x9do33.jpg" style="width:1.3em; margin:0 0.3em; border-radius: 50%;">Shihab Ali</a>
   </div>
  </footer>
 </body>
